[modify] 01. 修改选择日期item的layout

--- a/taixinkanghu/src/main/res/layout/fragment_select_hospital_item.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_select_hospital_item.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 			  android:layout_width="match_parent"
 			  android:layout_height="wrap_content" android:id="@+id/btn_region_ll"
-			  android:orientation="vertical">
+			  android:orientation="vertical" android:background="@color/main_color">
 	<Button
 	android:id="@+id/item_id"
 	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
+	android:layout_height="match_parent"
 	android:layout_marginLeft="5dp"
 	android:layout_marginRight="5dp"
 	android:layout_weight="1.0"
