--- a/taixinkanghu/src/main/res/layout/activity_confirm_order_shopping.xml
+++ b/taixinkanghu/src/main/res/layout/activity_confirm_order_shopping.xml
@@ -25,6 +25,7 @@
 				layout="@layout/item_dividing_line_horizontal"/>
 
 			<LinearLayout
+				android:id="@+id/address_region"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:orientation="horizontal">
