--- a/taixinkanghu/src/main/res/layout/activity_worker_level.xml
+++ b/taixinkanghu/src/main/res/layout/activity_worker_level.xml
@@ -12,7 +12,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="50dp"
 		android:orientation="horizontal"
-		android:paddingTop="5dp">
+		android:layout_marginTop="10dp">
 
 		<RadioButton
 			android:id="@+id/three_star_btn"
@@ -20,8 +20,8 @@
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:layout_weight="1"
-			android:text="@string/nurse_junior"
-			android:textColor="@drawable/text_color_page_tab"/>
+			android:background="@drawable/bg_top_tab"
+			android:text="@string/nurse_junior"/>
 
 		<RadioButton
 			android:id="@+id/four_star_btn"
@@ -29,8 +29,8 @@
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:layout_weight="1"
-			android:text="@string/intermediates_junior"
-			android:textColor="@drawable/text_color_page_tab"/>
+			android:background="@drawable/bg_top_tab"
+			android:text="@string/intermediates_junior"/>
 
 
 		<RadioButton
@@ -39,8 +39,8 @@
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:layout_weight="1"
-			android:text="@string/senior_junior"
-			android:textColor="@drawable/text_color_page_tab"/>
+			android:background="@drawable/bg_top_tab"
+			android:text="@string/senior_junior"/>
 
 		<RadioButton
 			android:id="@+id/six_star_btn"
@@ -48,14 +48,10 @@
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:layout_weight="1"
-			android:text="@string/super_junior"
-			android:textColor="@drawable/text_color_page_tab"/>
+			android:background="@drawable/bg_top_tab"
+			android:text="@string/super_junior"/>
 
 	</RadioGroup>
-
-	<include
-		android:id="@+id/dividing_line"
-		layout="@layout/item_dividing_line_horizontal"/>
 
 	<LinearLayout
 		android:layout_width="match_parent"
