--- a/taixinkanghu/src/main/res/layout/item_reviews_list.xml
+++ b/taixinkanghu/src/main/res/layout/item_reviews_list.xml
@@ -1,79 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+			  android:layout_width="match_parent"
+			  android:layout_height="wrap_content"
+			  android:background="@color/main_bg_color"
+			  android:orientation="vertical">
+
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="10dp"
+		android:background="@color/white"
+		android:orientation="vertical">
+
+		<include layout="@layout/item_dividing_line_horizontal"/>
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginLeft="15dp"
+			android:layout_marginRight="15dp"
+			android:orientation="vertical">
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginTop="10dp"
+				android:orientation="horizontal">
+
+				<TextView
+					android:id="@+id/iphoneNumber"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_weight="1"
+					android:text="15********6"
+					android:textSize="14sp"/>
+
+				<TextView
+					android:id="@+id/reviewsDate"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="评价时间：2015-06-24 00:42"
+					android:textSize="14sp"/>
 
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_order_btn"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/iphoneNumber"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="15********6"
-                android:textSize="14sp" />
-
-            <TextView
-                android:id="@+id/reviewsDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="评价时间：2015-06-24 00:42"
-                android:textSize="14sp" />
+			</LinearLayout>
 
 
-        </LinearLayout>
+			<include layout="@layout/item_dividing_line_horizontal_fine"/>
 
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="#99000000"
-            android:textSize="14sp" />
+			<TextView
+				android:id="@+id/content"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginBottom="10dp"
+				android:layout_marginTop="10dp"
+				android:text="相关评论：非常满意非常满意非常满意非常满意非常满意非常满意非常满意。"
+				android:textSize="14sp"/>
 
 
-        <TextView
-            android:id="@+id/content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:text="相关评论000000000000000000000000000000000000000"
-            android:textSize="14sp" />
+			<include layout="@layout/item_dividing_line_horizontal_fine"/>
 
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="#99000000"
-            android:textSize="14sp" />
+			<TextView
+				android:id="@+id/orderDate"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginBottom="10dp"
+				android:text="下订单时间：2015-16-14 10:40"
+				android:textSize="14sp"/>
 
+		</LinearLayout>
 
-        <TextView
-            android:id="@+id/orderDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:text="下订单时间：2015-16-14 10:40"
-            android:textSize="14sp" />
+		<include layout="@layout/item_dividing_line_horizontal"/>
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:background="@color/date_select_gray"></LinearLayout>
+	</LinearLayout>
 
 </LinearLayout>
