--- a/taixinkanghu/src/main/res/layout/activity_appointment_nursing.xml
+++ b/taixinkanghu/src/main/res/layout/activity_appointment_nursing.xml
@@ -289,19 +289,27 @@
 					android:gravity="center_vertical"
 					android:text="所在科室："/>
 
-				<EditText
+				<TextView
 					android:id="@+id/department_tv"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:layout_marginRight="60dp"
+					android:layout_marginRight="10dp"
+					android:layout_weight="1"
 					android:background="#00000000"
 					android:gravity="right"
-					android:hint="点击填写"
-					android:imeOptions="actionDone"
+					android:hint="点击选择"
+					android:imeOptions="actionNext"
 					android:singleLine="true"
 					android:textColor="@android:color/black"
 					android:textColorHint="@color/text_color_gray"
 					android:textSize="14.0sp"/>
+
+				<ImageView
+					android:id="@+id/dwon_department"
+					android:layout_width="20dp"
+					android:layout_height="20dp"
+					android:layout_marginRight="30dp"
+					android:background="@mipmap/img_down"/>
 
 			</LinearLayout>
 
