--- a/taixinkanghu/src/main/res/layout/activity_reviews.xml
+++ b/taixinkanghu/src/main/res/layout/activity_reviews.xml
@@ -1,89 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+			  android:layout_width="match_parent"
+			  android:layout_height="match_parent"
+			  android:orientation="vertical">
 
-    <include layout="@layout/include_header" />
+	<include layout="@layout/include_header"/>
 
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="#40000000" />
+	<View
+		android:layout_width="match_parent"
+		android:layout_height="0.5dp"
+		android:background="#40000000"/>
 
-    <!--底部功能菜单-->
-    <RadioGroup
-        android:id="@+id/rg_dingdan"
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_alignParentBottom="true"
-        android:background="#fff"
-        android:orientation="horizontal">
+	<!--底部功能菜单-->
+	<RadioGroup
+		android:id="@+id/rg_dingdan"
+		android:layout_width="match_parent"
+		android:layout_height="55dp"
+		android:layout_marginTop="10dp"
+		android:layout_alignParentBottom="true"
+		android:background="#fff"
+		android:orientation="horizontal">
 
-        <View
-            android:layout_width="0.5dp"
-            android:layout_height="match_parent"
-            android:background="#40000000" />
+		<View
+			android:layout_width="0.5dp"
+			android:layout_height="match_parent"
+			android:background="#40000000"/>
 
-        <RadioButton
-            style="@style/home_radio_button_style"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="#fff"
-            android:text="非常满意"
-            android:textColor="@drawable/text_color_page_tab" />
+		<RadioButton
+			style="@style/home_radio_button_style"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:background="@drawable/bg_top_tab"
+			android:text="非常满意"/>
 
-        <View
-            android:layout_width="0.5dp"
-            android:layout_height="match_parent"
-            android:background="#40000000" />
+		<View
+			android:layout_width="0.5dp"
+			android:layout_height="match_parent"
+			android:background="#40000000"/>
 
-        <RadioButton
-            style="@style/home_radio_button_style"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="#fff"
-            android:text="满意"
-            android:textColor="@drawable/text_color_page_tab" />
+		<RadioButton
+			style="@style/home_radio_button_style"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:background="@drawable/bg_top_tab"
+			android:text="满意"/>
 
-        <View
-            android:layout_width="0.5dp"
-            android:layout_height="match_parent"
-            android:background="#40000000" />
+		<View
+			android:layout_width="0.5dp"
+			android:layout_height="match_parent"
+			android:background="#40000000"/>
 
-        <RadioButton
-            style="@style/home_radio_button_style"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="#fff"
-            android:text="一般"
-            android:textColor="@drawable/text_color_page_tab" />
+		<RadioButton
+			style="@style/home_radio_button_style"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:background="@drawable/bg_top_tab"
+			android:text="一般"/>
 
-        <View
-            android:layout_width="0.5dp"
-            android:layout_height="match_parent"
-            android:background="#40000000" />
+		<View
+			android:layout_width="0.5dp"
+			android:layout_height="match_parent"
+			android:background="#40000000"/>
 
-    </RadioGroup>
+	</RadioGroup>
+	<ScrollView
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_weight="1">
 
-    <ListView
-        android:layout_weight="1"
-        android:id="@+id/listView_reviews"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        android:divider="@color/divider_color"
-        android:dividerHeight="0.5dp"
-        android:listSelector="@drawable/bg_btn_translucent"
-        android:scrollbars="none"
-        android:choiceMode="singleChoice">
+		<ListView
+		android:layout_weight="1"
+		android:id="@+id/listView_reviews"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:background="@color/white"
+		android:divider="@color/divider_color"
+		android:dividerHeight="0.5dp"
+		android:listSelector="@drawable/bg_btn_translucent"
+		android:scrollbars="none"
+		android:choiceMode="singleChoice">
 
-    </ListView>
+		</ListView>
 
-    <include layout="@layout/include_main_button" />
+		<!--<LinearLayout-->
+			<!--android:layout_width="match_parent"-->
+			<!--android:layout_height="match_parent"-->
+			<!--android:orientation="vertical">-->
+
+			<!--<include layout="@layout/item_reviews_list"/>-->
+
+			<!--<include layout="@layout/item_reviews_list"/>-->
+
+			<!--<include layout="@layout/item_reviews_list"/>-->
+
+			<!--<include layout="@layout/item_reviews_list"/>-->
+
+			<!--<include layout="@layout/item_reviews_list"/>-->
+
+			<!--<include layout="@layout/item_reviews_list"/>-->
+
+			<!--<include layout="@layout/item_reviews_list"/>-->
+		<!--</LinearLayout>-->
+	</ScrollView>
+
+	<include layout="@layout/include_main_button"/>
 
 </LinearLayout>
