--- a/taixinkanghu/src/main/res/layout/activity_appointment_nursing.xml
+++ b/taixinkanghu/src/main/res/layout/activity_appointment_nursing.xml
@@ -129,7 +129,6 @@
 					android:background="#00000000"
 					android:gravity="right"
 					android:hint="点击选择"
-					android:imeOptions="actionNext"
 					android:singleLine="true"
 					android:textColor="@android:color/black"
 					android:textColorHint="@color/text_color_gray"
@@ -168,7 +167,6 @@
 					android:background="#00000000"
 					android:gravity="right"
 					android:hint="点击选择"
-					android:imeOptions="actionNext"
 					android:singleLine="true"
 					android:textColor="@android:color/black"
 					android:textColorHint="@color/text_color_gray"
@@ -207,7 +205,6 @@
 					android:background="#00000000"
 					android:gravity="right"
 					android:hint="点击选择"
-					android:imeOptions="actionNext"
 					android:singleLine="true"
 					android:textColor="@android:color/black"
 					android:textColorHint="@color/text_color_gray"
@@ -253,7 +250,6 @@
 					android:background="#00000000"
 					android:gravity="right"
 					android:hint="点击选择"
-					android:imeOptions="actionNext"
 					android:singleLine="true"
 					android:textColor="@android:color/black"
 					android:textColorHint="@color/text_color_gray"
@@ -273,7 +269,7 @@
 				android:layout_height="40dp"
 				android:background="@drawable/bg_bule_frame_all"
 				android:gravity="center_vertical"
-				android:orientation="horizontal">
+				android:orientation="horizontal" android:id="@+id/department_ll">
 
 				<TextView
 					android:layout_width="10dp"
@@ -289,15 +285,14 @@
 					android:gravity="center_vertical"
 					android:text="所在科室："/>
 
-				<EditText
+				<TextView
 					android:id="@+id/department_tv"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:layout_marginRight="60dp"
 					android:background="#00000000"
 					android:gravity="right"
-					android:hint="点击填写"
-					android:imeOptions="actionDone"
+					android:hint="点击选择"
 					android:singleLine="true"
 					android:textColor="@android:color/black"
 					android:textColorHint="@color/text_color_gray"
@@ -329,7 +324,6 @@
 					android:background="#00000000"
 					android:gravity="right"
 					android:hint="点击填写"
-					android:imeOptions="actionNext"
 					android:singleLine="true"
 					android:textColor="@android:color/black"
 					android:textColorHint="@color/text_color_gray"
@@ -362,7 +356,6 @@
 					android:background="#00000000"
 					android:gravity="right"
 					android:hint="点击填写"
-					android:imeOptions="actionNext"
 					android:singleLine="true"
 					android:textColor="@android:color/black"
 					android:textColorHint="@color/text_color_gray"
@@ -401,7 +394,6 @@
 					android:background="#00000000"
 					android:gravity="right"
 					android:hint="点击选择"
-					android:imeOptions="actionNext"
 					android:singleLine="true"
 					android:textColor="@android:color/black"
 					android:textColorHint="@color/text_color_gray"
@@ -447,7 +439,6 @@
 					android:background="#00000000"
 					android:gravity="right"
 					android:hint="点击选择"
-					android:imeOptions="actionNext"
 					android:singleLine="true"
 					android:textColor="@android:color/black"
 					android:textColorHint="@color/text_color_gray"
