--- a/taixinkanghu/src/main/res/layout/activity_nurse_info.xml
+++ b/taixinkanghu/src/main/res/layout/activity_nurse_info.xml
@@ -46,6 +46,22 @@
 							android:paddingBottom="5dp"
 							android:paddingLeft="130dp">
 
+							<LinearLayout android:layout_width="wrap_content"
+										  android:layout_height="wrap_content"
+										  android:gravity="center_vertical"
+										  android:orientation="horizontal">
+								<TextView android:id="@+id/name_tv" android:layout_width="wrap_content"
+										  android:layout_height="wrap_content"
+										  android:layout_marginRight="8dp" android:text="王瑾瑜"
+										  android:textColor="#ffffffff" android:textSize="18.0sp"
+										  android:textIsSelectable="false"/>
+								<TextView android:id="@+id/nuring_level_tv"
+										  android:layout_width="wrap_content"
+										  android:layout_height="wrap_content"
+										  android:singleLine="true"
+										  android:text="@string/intermediates_junior"
+										  android:textColor="#ddffffff" android:textSize="14.0sp"/>
+							</LinearLayout>
 							<LinearLayout
 								android:layout_width="wrap_content"
 								android:layout_height="wrap_content"
@@ -53,31 +69,19 @@
 								android:orientation="horizontal">
 
 								<TextView
-									android:id="@id/name"
+									android:id="@+id/worker_id"
 									android:layout_width="wrap_content"
 									android:layout_height="wrap_content"
-									android:layout_marginRight="8dp"
-									android:text="王瑾瑜"
-									android:textColor="#ffffffff"
-									android:textSize="18.0sp"/>
-
-								<TextView
-									android:id="@id/level_name"
-									android:layout_width="wrap_content"
-									android:layout_height="wrap_content"
-									android:singleLine="true"
-									android:text="@string/intermediates_junior"
+									android:text="工号:"
 									android:textColor="#ddffffff"
 									android:textSize="14.0sp"/>
+								<TextView android:id="@+id/job_num_tv"
+										  android:layout_width="wrap_content"
+										  android:layout_height="wrap_content"
+										  android:textColor="#ddffffff" android:textSize="14.0sp"
+										  android:layout_marginLeft="5dp"/>
 							</LinearLayout>
 
-							<TextView
-								android:id="@id/worker_id"
-								android:layout_width="wrap_content"
-								android:layout_height="wrap_content"
-								android:text="工号：5124"
-								android:textColor="#ddffffff"
-								android:textSize="14.0sp"/>
 						</LinearLayout>
 
 						<LinearLayout
@@ -95,10 +99,9 @@
 								android:orientation="horizontal">
 
 								<TextView
-									android:id="@id/gender"
+									android:id="@+id/sex_tv"
 									android:layout_width="wrap_content"
 									android:layout_height="wrap_content"
-									android:text="男"
 									android:textColor="@color/text_color_gray"
 									android:textSize="14.0sp"/>
 
@@ -110,10 +113,9 @@
 									android:background="@color/divider_color"/>
 
 								<TextView
-									android:id="@id/workYear"
+									android:id="@+id/nuring_exp_tv"
 									android:layout_width="wrap_content"
 									android:layout_height="wrap_content"
-									android:text="2年护理经验"
 									android:textColor="@color/text_color_gray"
 									android:textSize="14.0sp"/>
 
@@ -125,10 +127,9 @@
 									android:background="@color/divider_color"/>
 
 								<TextView
-									android:id="@id/chinese_level"
+									android:id="@+id/language_level_tv"
 									android:layout_width="wrap_content"
 									android:layout_height="wrap_content"
-									android:text="普通话一般"
 									android:textColor="@color/text_color_gray"
 									android:textSize="14.0sp"/>
 							</LinearLayout>
@@ -141,10 +142,9 @@
 								android:orientation="horizontal">
 
 								<TextView
-									android:id="@id/age"
+									android:id="@+id/age_tv"
 									android:layout_width="wrap_content"
 									android:layout_height="wrap_content"
-									android:text="31岁"
 									android:textColor="@color/text_color_gray"
 									android:textSize="14.0sp"/>
 
@@ -156,10 +156,9 @@
 									android:background="@color/divider_color"/>
 
 								<TextView
-									android:id="@id/province"
+									android:id="@+id/hometown_tv"
 									android:layout_width="wrap_content"
 									android:layout_height="wrap_content"
-									android:text="吉林"
 									android:textColor="@color/text_color_gray"
 									android:textSize="14.0sp"/>
 
@@ -171,10 +170,9 @@
 									android:background="@color/divider_color"/>
 
 								<TextView
-									android:id="@id/nation"
+									android:id="@+id/nation_tv"
 									android:layout_width="wrap_content"
 									android:layout_height="wrap_content"
-									android:text="汉族"
 									android:textColor="@color/text_color_gray"
 									android:textSize="14.0sp"/>
 
@@ -186,17 +184,16 @@
 									android:background="@color/divider_color"/>
 
 								<TextView
-									android:id="@id/education"
+									android:id="@+id/education_level_tv"
 									android:layout_width="wrap_content"
 									android:layout_height="wrap_content"
-									android:text="大学本科"
 									android:textColor="@color/text_color_gray"
 									android:textSize="14.0sp"/>
 							</LinearLayout>
 						</LinearLayout>
 
 						<com.taixinkanghu.widget.circleimageview.CircleImageView
-							android:id="@+id/pic"
+							android:id="@+id/header_img_civ"
 							android:layout_width="100dp"
 							android:layout_height="100dp"
 							android:layout_margin="15dp"
@@ -241,7 +238,7 @@
 								android:src="@mipmap/ic_worker_intro"/>
 
 							<TextView
-								android:id="@+id/selfIntro"
+								android:id="@+id/intro_tv"
 								android:layout_width="match_parent"
 								android:layout_height="wrap_content"
 								android:layout_marginLeft="10dp"
@@ -356,7 +353,7 @@
 								android:textSize="14.0sp"/>
 
 							<TextView
-								android:id="@+id/certificate"
+								android:id="@+id/certificate_tv"
 								android:layout_width="match_parent"
 								android:layout_height="wrap_content"
 								android:text="健康证"
@@ -391,7 +388,7 @@
 								android:src="@mipmap/ic_worker_level_des"/>
 
 							<TextView
-								android:id="@id/certificate"
+								android:id="@+id/service_content_tv"
 								android:layout_width="wrap_content"
 								android:layout_height="wrap_content"
 								android:layout_marginLeft="10dp"
@@ -437,14 +434,19 @@
 								android:textSize="14.0sp"/>
 
 							<TextView
-								android:id="@id/level_des"
+								android:id="@+id/comment_rate_tv"
 								android:layout_width="wrap_content"
 								android:layout_height="wrap_content"
 								android:layout_weight="1.0"
-								android:text="好评70% 289人评论"
+								android:text="好评70%"
 								android:textColor="@color/text_color_black"
 								android:textSize="14.0sp"/>
 
+							<TextView android:id="@+id/comment_num_tv" android:layout_width="wrap_content"
+									  android:layout_height="wrap_content"
+									  android:layout_weight="1.0" android:text="289人评论"
+									  android:textColor="@color/text_color_black"
+									  android:textSize="14.0sp"/>
 							<ImageView
 								android:id="@+id/dwon_hospital"
 								android:layout_width="20dp"
@@ -843,7 +845,8 @@
 								android:layout_weight="1.1"
 								android:gravity="center"
 								android:text="120元/天"
-								android:textColor="@color/text_color_orange"/>
+								android:textColor="@color/text_color_orange"
+								android:id="@+id/service_charge_per_all_care_tv"/>
 
 							<TextView
 								android:layout_width="match_parent"
@@ -851,7 +854,8 @@
 								android:layout_weight="1"
 								android:gravity="center"
 								android:text="150元/天"
-								android:textColor="@color/text_color_orange"/>
+								android:textColor="@color/text_color_orange"
+								android:id="@+id/service_charge_per_all_half_care_tv"/>
 
 							<TextView
 								android:layout_width="match_parent"
@@ -859,7 +863,8 @@
 								android:layout_weight="1"
 								android:gravity="center"
 								android:text="180元/天"
-								android:textColor="@color/text_color_orange"/>
+								android:textColor="@color/text_color_orange"
+								android:id="@+id/service_charge_per_all_cannt_care_tv"/>
 
 						</LinearLayout>
 
@@ -885,7 +890,8 @@
 								android:layout_weight="1.1"
 								android:gravity="center"
 								android:text="110元/天"
-								android:textColor="@color/text_color_orange"/>
+								android:textColor="@color/text_color_orange"
+								android:id="@+id/service_charge_per_day_care_tv"/>
 
 							<TextView
 								android:layout_width="match_parent"
@@ -893,7 +899,8 @@
 								android:layout_weight="1"
 								android:gravity="center"
 								android:text="120元/天"
-								android:textColor="@color/text_color_orange"/>
+								android:textColor="@color/text_color_orange"
+								android:id="@+id/service_charge_per_day_half_care_tv"/>
 
 							<TextView
 								android:layout_width="match_parent"
@@ -901,7 +908,8 @@
 								android:layout_weight="1"
 								android:gravity="center"
 								android:text="160元/天"
-								android:textColor="@color/text_color_orange"/>
+								android:textColor="@color/text_color_orange"
+								android:id="@+id/service_charge_per_day_cannt_care_tv"/>
 
 						</LinearLayout>
 
@@ -927,7 +935,8 @@
 								android:layout_weight="1.1"
 								android:gravity="center"
 								android:text="110元/天"
-								android:textColor="@color/text_color_orange"/>
+								android:textColor="@color/text_color_orange"
+								android:id="@+id/service_charge_per_night_care_tv"/>
 
 							<TextView
 								android:layout_width="match_parent"
@@ -935,7 +944,8 @@
 								android:layout_weight="1"
 								android:gravity="center"
 								android:text="120元/天"
-								android:textColor="@color/text_color_orange"/>
+								android:textColor="@color/text_color_orange"
+								android:id="@+id/service_charge_per_night_half_care_tv"/>
 
 							<TextView
 								android:layout_width="match_parent"
@@ -943,7 +953,8 @@
 								android:layout_weight="1"
 								android:gravity="center"
 								android:text="160元/天"
-								android:textColor="@color/text_color_orange"/>
+								android:textColor="@color/text_color_orange"
+								android:id="@+id/service_charge_per_night_cannt_care_tv"/>
 
 						</LinearLayout>
 
