--- a/taixinkanghu/src/main/res/layout/fragment_select_patient_state.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_select_patient_state.xml
@@ -7,7 +7,7 @@
 	<LinearLayout
 		android:id="@+id/title_region"
 		android:layout_width="match_parent"
-		android:layout_height="214dp"
+		android:layout_height="230dp"
 		android:background="@color/mask"
 		android:orientation="vertical">
 
@@ -37,7 +37,7 @@
 		android:id="@+id/btn_state_not_care_myself"
 		android:layout_width="match_parent"
 		android:layout_height="48dp"
-		android:background="@drawable/bg_order_btn"
+		android:background="@drawable/bg_bule_frame_bottom"
 		android:gravity="center"
 		android:text="@string/btn_state_not_care_myself_text"
 		android:textColor="#ff666666"
